--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/SVG_logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>
+      UOH GPA and CGPA Calculator | University of Haripur GPA & CGPA Calculator
+    </title>
   </head>
   <body>
     <div id="root"></div>
